# vrchat-eidolon

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
configs/: app.yaml  dev.yaml
src/: app.py  config.py
src/audio/: __init__.py  capture.py  playback.py  types.py  vad.py
src/bus/: __init__.py  events.py  queue.py
src/core/: __init__.py  cli.py  config.py  errors.py  types.py
src/eidolon_mcp/: __init__.py  client.py  policy.py  registry.py
src/graph/: __init__.py
src/llm/: __init__.py  client.py  prompts.py  tool_call_accumulator.py
src/mcp/: __init__.py  client.py  policy.py  registry.py
src/mcp_client/: __init__.py  client.py  errors.py  types.py
src/observability/: __init__.py  context.py  ids.py  logging.py
src/orchestrator/: __init__.py  graph_orchestrator.py  graph_state.py  session.py  simple.py
src/qwen/: __init__.py  client.py  tool_call_accumulator.py
src/runtime/: lifecycle.py  logging.py  tracing.py
src/tools/: __init__.py  langchain_mcp_client.py  mcp_bridge.py  mcp_gateway.py  mcp_naming.py  mcp_specs.py  name_mapping.py  openai_tools.py  runtime.py  tool_messages.py  tool_result_codec.py
tests/: conftest.py  test_audio_out_flush.py  test_config.py  test_config_loader.py  test_loopback_convert.py  test_rate_convert.py  test_tool_call_accumulator.py  test_tool_policy.py  test_tool_router.py  test_toolcall_accumulator.py
tests/unit/: test_audio_vad_energy.py  test_config_expand_env.py  test_mcp_bridge.py  test_mcp_config.py  test_mcp_naming.py  test_orchestrator_audio_input.py  test_orchestrator_degrade_chat_only.py  test_tool_name_mapping.py  (+4 more)
vrchat_eidolon/: __init__.py
(+44 files in other folders)
