[project]
name = "vrchat-eidolon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"PyYAML>=6.0",
	"python-dotenv>=1.0",
	"openai>=1.0.0",
	"pytest>=8.0",
	"mcp>=1.25.0",
	"langchain-mcp-adapters>=0.2.1",
	"langgraph>=1.0.5",
	"sounddevice>=0.5.3",
	"langchain-openai>=1.1.6",
]

[project.scripts]
vrchat-eidolon = "runtime.lifecycle:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
	"src/runtime",
	"src/bus",
	"src/device_io",
	"src/llm",
	"src/mcp",
	"src/graph",
]


